# LandDecodedOCR

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-07-01-api-endpoint-implementation.md  2026-07-01-ingestion-module-implementation.md  2026-07-01-ocr-pipeline-scaffolding.md  2026-07-01-pipeline-implementation.md  2026-07-01-preprocessing-module-implementation.md
docs/superpowers/specs/: 2026-07-01-api-endpoint-design.md  2026-07-01-bangla-english-ocr-pipeline-design.md  2026-07-01-confidence-gate-design.md  2026-07-01-ingestion-module-design.md  2026-07-01-land-record-schema-design.md  2026-07-01-pipeline-module-design.md  2026-07-01-preprocessing-module-design.md
src/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/baml_src/: clients.baml  ocr.baml
src/ocr_pipeline/: ingestion.py  pipeline.py  preprocessing.py  review.py
tests/: test_baml_schema.py  test_ingestion.py  test_ingestion_real_document.py  test_main.py  test_package.py  test_pipeline.py  test_preprocessing.py  test_preprocessing_real_document.py  test_review.py
