[project]
name = "landdecoded-x-devsoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-py>=0.223.0",
    "fastapi>=0.139.0",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_pipeline", "src/baml_client"]
